--- a/MyLeoRetailer/Views/PostLogin/Master/PurchaseOrderRequest/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/PurchaseOrderRequest/Index.cshtml
@@ -176,7 +176,7 @@
                 <div class="block">
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Subcategory.</span>
-                        <select class="form-control" id="drpSubCategory" name="PurchaseOrderRequest.SubCategory_Id">
+                        <select class="form-control select" id="drpSubCategory" name="PurchaseOrderRequest.SubCategory_Id">
                             <option value="0">Select Sub Category</option>
                         </select>
                     </div>
