--- a/MyLeoRetailer/Views/PostLogin/Master/PurchaseReturn/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/PurchaseReturn/Index.cshtml
@@ -67,7 +67,6 @@
                                 <h4 style="margin-top: 0px;">Vendor Details.</h4>
 
                                 <div class="form-group">
-
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Vendor Name.</span>
                                     <select class="form-control select" name="PurchaseReturn.Vendor_Id" onchange="Get_Vendor_Tax_Details_By_Id(this.value)">
                                         <option value="">Select Vendor</option>
@@ -102,7 +101,7 @@
 
                                 <div class="form-group">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Purchase Invoice No.</span>
-                                    <select class="form-control" id="drpPurchase_Invoice_Id" name="PurchaseReturn.Purchase_Invoice_Id" onchange="Set_Purchase_Invoice_Id(this.value)">
+                                    <select class="form-control select" id="drpPurchase_Invoice_Id" name="PurchaseReturn.Purchase_Invoice_Id" onchange="Set_Purchase_Invoice_Id(this.value)">
                                         <option value="0">Select Invoice No.</option>
                                     </select>
                                 </div>
@@ -352,7 +351,7 @@
 
 
                     <div class="row">
-                        <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02); border-bottom: 1px solid #DDD; border-top: 1px solid #DDD; padding: 0px 10px 10px 10px; height: 100px;">
+                        <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02); border-bottom: 1px solid #DDD; border-top: 1px solid #DDD; padding: 0px 10px 10px 10px; height: 120px;">
                             <div class="block">
                                 <h4 style="margin-top: 0px;">Transport Details.</h4>
 
