--- a/MyLeoRetailer/Views/PostLogin/Master/PurchaseInvoice/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/PurchaseInvoice/Index.cshtml
@@ -84,8 +84,9 @@
                                 <input type="hidden" class="form-control input-sm" id="hdf_Vendor_Id">
 
                                 <div class="form-group">
+                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Vendor Name.</span>
                                     <select class="form-control select" id="drpVendor_Id" name="PurchaseInvoice.Vendor_Id" onchange="Get_Vendor_Details_By_Id(this.value)">
-                                        <option value="">Select Vendor</option>
+                                        <option value="0">Select Vendor</option>
                                         @foreach (var item in Model.PurchaseInvoice.Vendors)
                                         {
                                             if (Model.PurchaseInvoice.Vendor_Id == item.Vendor_Id)
@@ -99,7 +100,7 @@
                                         }
                                     </select>
                                 </div>
-
+                                                           
                                 <div class="form-group">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Vendor Address.</span>
                                     <input type="text" class="form-control input-sm" name="PurchaseInvoice.Vendor_Address" id="txtVendor_Address" readonly />
@@ -260,7 +261,7 @@
                                         <td>
                                             <div class="form-group auto-complete">
                                                 <div class="input-group">
-                                                    <input type="text" class="form-control invoice-filter autocomplete-text" name="PurchaseInvoice.PurchaseInvoices[0].Purchase_Order_No" id="textPurchase_Order_No_0" placeholder="Enter PO no. to search" value="" data-table="Purchase_Order" data-col="Purchase_Order_Id,Purchase_Order_No" data-headernames="Purchase Order" data-param="hdf_Vendor_Id" data-field="Vendor_Id" />
+                                                    <input type="text" class="form-control invoice-filter autocomplete-text" id="textPurchase_Order_No_0" placeholder="Enter PO no. to search" value="" data-table="Purchase_Order" data-col="Purchase_Order_Id,Purchase_Order_No" data-headernames="Purchase Order" data-param="hdf_Vendor_Id" data-field="Vendor_Id" />
                                                     <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
                                                     <input type="hidden" id="hdnPurchase_Order_Id_0" value="" name="PurchaseInvoice.PurchaseInvoices[0].Purchase_Order_Id" class="auto-complete-value" />
                                                     <input type="hidden" id="hdnPurchase_Order_No_0" value="" name="PurchaseInvoice.PurchaseInvoices[0].Purchase_Order_No" class="auto-complete-label" />
@@ -421,7 +422,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02); border-bottom: 1px solid #DDD; border-top: 1px solid #DDD; padding: 0px 10px 10px 10px; height: 100px;">
+                        <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02); border-bottom: 1px solid #DDD; border-top: 1px solid #DDD; padding: 0px 10px 10px 10px; height: 120px;">
                             <div class="block">
                                 <h4 style="margin-top: 0px;">Payment Terms.</h4>
                                                              
@@ -456,7 +457,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02); border-bottom: 1px solid #DDD; border-top: 1px solid #DDD; padding: 0px 10px 10px 10px; height: 100px;">
+                        <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02); border-bottom: 1px solid #DDD; border-top: 1px solid #DDD; padding: 0px 10px 10px 10px; height: 120px;">
                             <div class="block">
                                 <h4 style="margin-top: 0px;">Transport Details.</h4>
 
