--- a/MyLeoRetailer/Views/PostLogin/Master/Customer/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Customer/Search.cshtml
@@ -40,20 +40,49 @@
 
                         <div class="col-md-5">
 
-                            <div class="form-group">
+                            @*<div class="form-group">
                                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Customer name.</span>
                                 <input type="text" class="form-control" name="Filter.Customer_Name" placeholder="Enter customer name to search." />
                                 <input type="hidden" id="hdnCustomer_Id" name="Customer.Customer_Id" value="@Model.Customer.Customer_Id">
-                            </div>
+                            </div>*@
+
+                            @* LookUp Code Added by Vinod Mane on 22/09/2016*@
+                            <div class="form-group auto-complete">
+                                <div class="input-group">
+                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Customer name.</span>
+                                    </div>
+                                    <div class="input-group">
+                                        
+                                        <input type="text" class="form-control color-filter autocomplete-text" name="Filter.Customer_Name" id="txtCustomer_Name" placeholder="Enter customer name to search." data-table="Customer" data-col="Customer_Id,Customer_Name" data-headernames="Customer Name">
+                                        <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                                        <input type="hidden" id="hdnCustomer_Id" name="Customer.Customer_Id">  @*value="@Model.Customer.Customer_Id"*@
+                                        <input type="hidden" id="hdnCustomerId" value="" name="Filter.Customer_Name" class="auto-complete-value" />
+
+                                    </div>
+                                </div>
+                            @*End*@
 
                         </div>
 
                         <div class="col-md-5">
 
-                            <div class="form-group">
+                            @*<div class="form-group">
                                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Mobile number.</span>
                                 <input type="text" class="form-control" name="Filter.Customer_Mobile1" placeholder="Enter customer mobile number to search." maxlength="12" />
-                            </div>
+                            </div>*@
+                            @* LookUp Code Added by Vinod Mane on 22/09/2016*@
+                            <div class="form-group auto-complete">
+                                <div class="input-group">
+                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Mobile number.</span>
+                                    </div>
+                                    <div class="input-group">
+                                        <input type="text" class="form-control color-filter autocomplete-text" name="Filter.Customer_Mobile1" id="txtCustomer_Mobile1" placeholder="Enter customer mobile number to search." data-table="Customer" data-col="Customer_Id,Customer_Mobile1" data-headernames="Customer Mobile">
+                                        <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                                        <input type="hidden" id="hdnCustomer_Mobile1" value="" name="Filter.Customer_Mobile1" class="auto-complete-value" />
+
+                                    </div>
+                                </div>
+                            @*End*@
 
                         </div>
 
@@ -61,7 +90,7 @@
 
                             <div class="btn-group">
                                 <button role="button" class="btn btn-success active" value="Create" id="btnCreateCustomer">Create</button>
-                                <button class="btn btn-danger active" value="Edit" id="btnEditCustomer">Edit</button>
+                                <button class="btn btn-danger active" style="display:none" value="Edit" id="btnEditCustomer">Edit</button>
                             </div>
 
                         </div>
