--- a/MyLeoRetailer/Views/PostLogin/Master/VendorContact/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/VendorContact/Search.cshtml
@@ -52,9 +52,9 @@
                                 <div class="input-group">
                                     <input type="text" class="form-control color-filter autocomplete-text" name="Filter.Vendor_Contact_Name" id="txtVendor_Contact_Name" placeholder="Enter Vendor Contact name to search." data-table="VendorContact" data-col="VendorContact_Id,Vendor_Contact_Name" data-headernames="Vendor Contact">
                                     <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
-                                    <input type="hidden" name="VendorContact.VendorContact_Id" id="hdnVendorContact_Id">
-                                    @*<input type="hidden" id="hdnColourId" value="" name="Filter.Color" class="auto-complete-value" />
-                                     <input type="hidden" id="hdnColourName" value="" name="Filter.Color" class="auto-complete-label" />*@
+                                    <input type="hidden" name="VendorContact.VendorContact_Id" id="hdnVendorContact_Id">                                   
+                                    <input type="hidden" id="hdnVendorContactId" value="" name="Filter.Vendor_Contact_Name" class="auto-complete-value" />
+                                    @*<input type="hidden" id="hdnVendorContactName" value="" name="Filter.Vendor_Contact_Name" class="auto-complete-label" />*@
                                 </div>
                             </div>
                             @*End*@
