--- a/MyLeoRetailer/Views/PostLogin/Master/Receivable/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Receivable/Index.cshtml
@@ -29,7 +29,7 @@
 
     <div class="row">
 
-        <form role="form" id="frmReceivable">
+        <form role="form" id="frmReceivable" method="post">
 
             <div class="box box-default">
 
@@ -106,7 +106,7 @@
 
                             <div class="row">
 
-                               
+
                                 <div class="col-md-4">
                                     <div class="form-group">
                                         <span class="label label-primary label-form" style="margin-bottom: 1px;">From date.</span>
@@ -140,7 +140,7 @@
                                     <div class="col-md-12">
                                         <div class="table-responsive" style="margin: 50px 0;">
                                             <input type="hidden" id="hdnIsEditSalesInvoiceDetails" value="false" />
-                                            <input type="hidden" id="hdnRowIdspecific" value="0"/>
+                                            <input type="hidden" id="hdnRowIdspecific" value="0" />
                                             <table class="table table-bordered" id="tblBSalesInvoiceDetails">
                                                 <thead>
                                                     <tr id="subhead">
@@ -152,7 +152,7 @@
                                                         <th>Total Amount</th>
                                                         <th>Amount Paid</th>
                                                         <th>Amount Balance</th>
-                                                        <th>Payment Date</th>                                                      
+                                                        @*<th>Payment Date</th>*@
                                                         <th>Payment Status</th>
                                                         <th>Action</th>
                                                     </tr>
@@ -183,9 +183,8 @@
                                                         <th>Customer Name</th>
                                                         <th>Customer Mobile</th>
                                                         <th>Total Amount</th>
-                                                        <th>Amount Paid</th>
                                                         <th>Amount Balance</th>
-                                                        <th>Payment Date</th>
+                                                        @*<th>Payment Date</th>*@
                                                         <th>Payment Status</th>
                                                         <th>Action</th>
                                                     </tr>
@@ -226,25 +225,25 @@
                                                                     <input type="hidden" id="hdnTotal_MRP_Amount@(i)" name="Receivables[@(i-1)].Total_MRP_Amount" value="@itm.Total_MRP_Amount">
                                                                 </td>
 
-                                                                <td>
+                                                                @*<td>
                                                                     <span id="trPaid_Amount@(i)"> @itm.Paid_Amount</span>
                                                                     <input type="hidden" id="hdnPaid_Amount@(i)" name="Receivables[@(i-1)].Paid_Amount" value="@itm.Paid_Amount">
-                                                                </td>
+                                                                </td>*@
                                                                 <td>
                                                                     <span id="trBalance_Amount@(i)"> @itm.Balance_Amount</span>
                                                                     <input type="hidden" id="hdnBalance_Amount@(i)" name="Receivables[@(i-1)].Balance_Amount" value="@itm.Balance_Amount">
                                                                 </td>
 
-                                                                <td>
-                                                                    <span id="trPayament_Date@(i)"> @itm.Payament_Date</span>
+                                                                @*<td>
+                                                                    <span id="trPayament_Date@(i)"> @itm.Payament_Date.ToShortDateString()</span>
                                                                     <input type="hidden" id="hdnPayament_Datet@(i)" name="Receivables[@(i-1)].Payament_Date" value="@itm.Payament_Date">
-                                                                </td>
+                                                                </td>*@
                                                                 <td>
-                                                                    <span id="trPayment_Status@(i)"> @itm.Payment_Status</span>
-                                                                    <input type="hidden" id="hdnPayment_Status@(i)" name="Receivables[@(i-1)].Payment_Status" value="@itm.Payment_Status">
+                                                                    <span id="trPayment_Status_Value@(i)"> @itm.Payment_Status_Value</span>
+                                                                    <input type="hidden" id="hdnPayment_Status_Value@(i)" name="Receivables[@(i-1)].Payment_Status_Value" value="@itm.Payment_Status_Value">
                                                                 </td>
 
-                                                                
+
 
                                                                 <td class='edit'>
                                                                     <button class="btn btn-success active" type="button" id="btnReceivablesPay" onclick="Get_Receivables(@itm.Sales_Invoice_Id,@itm.Sales_Credit_Note_Id)">Pay</button>
@@ -254,7 +253,7 @@
                                                         }
                                                     }
 
-                                                   
+
                                                 </thead>
                                                 <tbody></tbody>
 
