--- a/MyLeoRetailer/Views/PostLogin/Master/Replacement/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Replacement/Index.cshtml
@@ -3,7 +3,6 @@
 
 <script src="~/Scripts/Modules/Replacement/Replacement_event.js"></script>
 <script src="~/Scripts/Modules/Replacement/Replacement_method.js"></script>
-<script src="~/Scripts/Modules/Replacement/Replacement_validation.js"></script>
 <script src="~/Scripts/Modules/common_methods.js"></script>
 
 <!-- START BREADCRUMB -->
@@ -41,10 +40,9 @@
                         <div class="col-md-3" style="background: rgba(0, 0, 0, 0.02); border-bottom: 1px solid #DDD; border-right: 1px solid #DDD; padding: 10px; height: 200px;">
 
                             <div class="block">
-
                                 <div class="form-group">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Vendor Name.</span>
-                                    <select class="form-control select" name="Replacement.Vendor_Id" id="drpVendor_Id">
+                                    <select class="form-control select" name="Replacement.Vendor_Id" id="drpVendor_Id" onchange="Get_Vendor_Details_By_Id(this.value)">
                                         <option value="">Select Vendor</option>
                                         @foreach (var item in Model.Vendors)
                                         {
@@ -60,22 +58,24 @@
                                     </select>
                                 </div>
 
+                                <input type="hidden" class="form-control input-sm" id="hdf_Purchase_Invoice_Id">
                                 <div class="form-group">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Purchase Invoice No.</span>
-                                    <select class="form-control select" name="Replacement.Purchase_Invoice_Id">
+                                    <select class="form-control select" name="Replacement.Purchase_Invoice_Id" onchange="Set_Purchase_Invoice_Id(this.value)">
                                         <option value="">Select Invoice No.</option>
                                         @foreach (var item in Model.PurchaseInvoices)
+                                        {
+                                            if (Model.Replacement.Purchase_Invoice_Id == item.Purchase_Invoice_Id)
                                             {
-                                                if (Model.Replacement.Purchase_Invoice_Id == item.Purchase_Invoice_Id)
-                                                {
-                                                    <option value="@item.Purchase_Invoice_Id" selected="selected">@item.Purchase_Invoice_No</option>
-                                                }
-                                                else
-                                                {
-                                                    <option value="@item.Purchase_Invoice_Id">@item.Purchase_Invoice_No</option>
-                                                }
+                                                <option value="@item.Purchase_Invoice_Id" selected="selected">@item.Purchase_Invoice_No</option>
                                             }
+                                            else
+                                            {
+                                                <option value="@item.Purchase_Invoice_Id">@item.Purchase_Invoice_No</option>
+                                            }
+                                        }
                                     </select>
+
                                 </div>
 
                             </div>
@@ -98,8 +98,8 @@
 
                                 <div class="form-group">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Replacement Date.</span>
-                                    <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">
-                                        <input type="text" class="form-control datepicker" name="Replacement.Replacement_Date" id="txtReplacement_Date" value="@((Model.Replacement.Replacement_Date == DateTime.MinValue ? DateTime.Now.ToString("dd-MM-yyyy") : Model.Replacement.Replacement_Date.ToString("dd-MM-yyyy")))" />
+                                    <div class="input-group date" id="dp-2" data-date="" data-date-format="mm-dd-yyyy">
+                                        <input type="text" class="form-control datepicker" name="Replacement.Replacement_Date" id="txtReplacement_Date" value="@((Model.Replacement.Replacement_Date == DateTime.MinValue ? "" : Model.Replacement.Replacement_Date.ToString("mm-dd-yyyy")))" />
                                         <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                                     </div>
                                 </div>
@@ -115,7 +115,7 @@
                             <div class="block">
                                 <div class="block" style="margin-top:0px; ">
                                     <div class="btn-group">
-                                        <a href="javascript:AddPurchaseInvoiceDetails();" id="btnAddInputRow" class="btn btn-success active">
+                                        <a href="javascript:AddReplacementDetails();" id="btnAddInputRow" class="btn btn-success active">
                                             <i class="mdi mdi-plus"></i>
                                             Add New Row
                                         </a>
@@ -128,7 +128,7 @@
                     <div class="row">
                         <div class="table-responsive" style="width:100%; margin: 0px 0;">
                             <input type="hidden" id="hdnRowIdspecific" value="0" />
-                            <table class="table table-bordered table-hover" id="tblPurchaseInvoiceItems">
+                            <table class="table table-bordered table-hover" id="tblReplacementItems">
                                 <thead>
                                     <tr>
                                         <th width="150px">Barcode No.</th>
@@ -147,12 +147,29 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr id="PurchaseInvoiceItemRow_0">
+                                    <tr id="ReplacementItemRow_0">
                                         <td>
                                             <input class="form-control input-sm" type="text" name="Replacements[0].Barcode_No" id="textBarcode_No_0">
                                         </td>
                                         <td>
-                                            <input class="form-control input-sm" type="text" name="Replacements[0].SKU_Code" id="textSKU_No_0" onchange="javascript: Get_Purchase_Invoice_Items_By_SKU_Code(0);">
+                                            @*<div class="form-group auto-complete">
+                                                <div class="input-group">
+                                                    <input type="text" class="form-control invoice-filter autocomplete-text" id="textSKU_No_0" onblur="javascript: Get_Replacement_Items_By_SKU_Code(0);" placeholder="Enter SKU to search" value="" data-table="Purchase_Invoice_Item" data-col="Purchase_Order_Id,SKU_Code" data-headernames="SKU Code"  />
+                                                    <span class="input-group-addon"><a href="#" class="text-muted" id="hrefDealer" role="button"><i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                                                    <input type="hidden" id="hdnProduct_Id_0" value="" class="auto-complete-value" />
+                                                    <input type="hidden" id="hdnSKU_No_0" value="" name="Replacements[0].SKU_Code" class="auto-complete-label" />
+                                                </div>
+                                            </div>*@
+
+                                            <div class="form-group auto-complete">
+                                                <div class="input-group">
+                                                    <input type="text" class="form-control invoice-filter autocomplete-text" id="textSKU_No_0" onblur="javascript: Get_Replacement_Items_By_SKU_Code(0);" placeholder="Enter SKU to search" value="" data-table="Purchase_Invoice_Item" data-col="Purchase_Order_Id,SKU_Code" data-headernames="SKU Code" data-param="hdf_Purchase_Invoice_Id" data-field="Purchase_Invoice_Id" />
+                                                    <span class="input-group-addon"><a href="#" class="text-muted" id="hrefDealer" role="button"><i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                                                    <input type="hidden" id="hdnPurchase_Order_Id_0" value="" name="Replacements[0].Purchase_Order_Id" class="auto-complete-value" />
+                                                    <input type="hidden" id="hdnSKU_No_0" value="" name="Replacements[0].SKU_Code" class="auto-complete-label" />
+                                                </div>
+                                            </div>
+
                                         </td>
                                         <td>
                                             <input class="form-control input-sm" type="text" name="Replacements[0].Article_No" id="textArticle_No_0" readonly />
@@ -193,7 +210,7 @@
                                             <input class="form-control input-sm" type="text" name="Replacements[0].Amount" id="textAmount_0" readonly />
                                         </td>
                                         <td>
-                                            <button type='button' id='delete-invoice-details' class='btn btn-danger active' onclick='javascript:DeletePurchaseInvoiceDetailsData(0)'>Delete</button>
+                                            <button type='button' id='delete-invoice-details' class='btn btn-danger active' onclick='javascript:DeleteReplacementDetailsData(0)'>Delete</button>
                                         </td>
                                     </tr>
                                 </tbody>
@@ -204,7 +221,7 @@
 
                     <div class="row">
                         <div class="table-responsive" style="width:100%;">
-                            <table class="table table-bordered" id="tblPurchaseInvoiceItems">
+                            <table class="table table-bordered" id="tblReplacementItems">
                                 <thead>
                                     <tr></tr>
                                 </thead>
@@ -261,8 +278,9 @@
 
                                 <div class="form-group col-md-3">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Payment Due Date.</span>
-                                    <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">
-                                        <input type="text" class="form-control datepicker" name="Replacement.Payment_Due_Date" id="txtPayment_Due_Date" value="@((Model.Replacement.Payment_Due_Date == DateTime.MinValue ? DateTime.Now.ToString("dd-MM-yyyy") : Model.Replacement.Payment_Due_Date.ToString("dd-MM-yyyy")))" />
+                                    <div class="input-group date" id="dp-2" data-date="" data-date-format="mm-dd-yyyy">
+                                        <input type="text" class="form-control datepicker" name="Replacement.Payment_Due_Date" id="txtPayment_Due_Date" value="@((Model.Replacement.Payment_Due_Date == DateTime.MinValue ? "" : Model.Replacement.Payment_Due_Date.ToString("mm-dd-yyyy")))" />
+                                        @*<input type="text" class="form-control datepicker" name="Replacement.Payment_Due_Date" id="txtPayment_Due_Date" value="@((Model.Replacement.Payment_Due_Date == "" ? DateTime.Now.ToString("dd-MM-yyyy") : Model.Replacement.Payment_Due_Date))" />*@
                                         <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                                     </div>
                                 </div>
