Print purchase order invoice details

--- a/MyLeoRetailer/Views/PostLogin/Master/PurchaseOrder/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/PurchaseOrder/Search.cshtml
@@ -52,6 +52,7 @@
                             <div class="btn-group">
                                 <button role="button" class="btn btn-success active" value="Create" id="btnCreatePurchaseOrder">Create</button>
                                 <button class="btn btn-danger active" value="Edit" id="btnEditPurchaseOrder">Edit</button>
+                                <button class="btn btn-info active" value="View" id="btnViewPurchaseOrder">View</button>
                             </div>
 
                         </div>
