--- a/MyLeoRetailer/Views/PostLogin/Master/Role/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Role/Index.cshtml
@@ -38,7 +38,7 @@
 
                 <form role="form" id="frmRole">
                     <div class="form-group">
-                        <input type="text" id="txtRole_Name" name="role.Role_Name" class="form-control" placeholder="Enter role." />
+                        <input type="text" id="txtRole_Name" name="role.Role_Name" class="form-control" placeholder="Enter role." maxlength="50"/>
                         <input type="hidden" id="hdnRole_Name">
                         <input type="hidden" name="role.Role_Id">
                     </div>
