--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturnRequest/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturnRequest/Index.cshtml
@@ -40,6 +40,7 @@
                                 <h4 style="margin-top: 0px;">Branch Details.</h4>
 
                                 <div class="form-group auto-complete">
+                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Branch Name.</span>
                                     <div class="input-group">
                                         <input type="text" class="form-control autocomplete-text" id="textBrand" name="Branch" placeholder="Branch name" value="" data-table="Branch" data-col="Branch_ID,Branch_Name" data-headernames="Branches" data-param="hdnCookiesBranches" data-field="Branch_ID" />
                                         <span class="input-group-addon"><a href="#" class="text-muted" id="hrefDealer" role="button"><i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
